[gd_scene load_steps=5 format=3 uid="uid://p4t18gvo28hv"]

[ext_resource type="Script" path="res://scripts/menus/start_menu.gd" id="1_buam8"]
[ext_resource type="Texture2D" uid="uid://hpm6ao4xpgjf" path="res://assets/UI/Button_52x14.png" id="2_sjf6p"]

[sub_resource type="Theme" id="Theme_kvm5l"]
/colors/Test = Color(0, 0, 0, 1)
/icons/Test = ExtResource("2_sjf6p")
Button/icons/icon = null

[sub_resource type="ImageTexture" id="ImageTexture_3e1wp"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_buam8")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_kvm5l")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 45.0
offset_top = -50.0
offset_right = 151.0
offset_bottom = 51.0
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "START GAME"
icon = SubResource("ImageTexture_3e1wp")

[node name="OptionButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "OPTIONS"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "EXIT"

[node name="GameTitleLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -168.0
offset_top = 96.0
offset_right = 172.0
offset_bottom = 179.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "GAME TITLE"

[node name="StudioLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 624.0
offset_top = 496.0
offset_right = 941.0
offset_bottom = 541.0
theme_override_font_sizes/font_size = 32
text = "Developed by "

[node name="VersionLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 624.0
offset_top = 541.0
offset_right = 764.0
offset_bottom = 575.0
theme_override_font_sizes/font_size = 24
text = "v0.0.1-alpha"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
